[package]
name = "vapore"
description = "Vangaurd portfolio rebalancing algorithm"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keyword = ["Vanguard", "Investment"]
categories = ["command-line-utilities"]
repository = "https://github.com/Roco-scientist/VAnguard-POrtfolio-REbalance"

[[bin]]
name = "vapore"
test = false
bench = false
path = "src/main.rs"


[dependencies]
alpaca-finance = "0.2.1"
anyhow = "1.0"
chrono = "0.4.19"
clap = "2.33"
futures = "0.3"
lazy_static = "1.4"
tokio = "0.2.25"
yahoo_finance_api = "1.2.2"
