[package]
name = "vapore"
description = "Vangaurd portfolio rebalancing algorithm"
version = "0.6.3"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keyword = ["Vanguard", "Investment"]
categories = ["command-line-utilities"]
repository = "https://github.com/Roco-scientist/VAnguard-POrtfolio-REbalance"

[[bin]]
name = "vapore"
test = false
bench = false
path = "src/main.rs"


[dependencies]
anyhow = "1.0"
apca = "0.28"
chrono = "0.4.34"
clap = "2.33"
futures = "0.3"
lazy_static = "1.4"
tokio = {version = "1", features = ["full"]}
yahoo_finance_api = "2.2"
time = {version = "0.3", features = ["parsing"]}
